# c-mlir

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/: AppendCIRCT.cmake  AppendClang.cmake  AppendLLVM.cmake  AppendMLIR.cmake  CompilerSetup.cmake  LibraryTarget.cmake  config.cmake
include/: CMakeLists.txt
include/cmlir/: CMLIROps.td  CMakeLists.txt  Dialect.h  Dialect.td  Ops.h
include/cmlir/Transforms/: CMakeLists.txt  Passes.h  Passes.td
lib/: CMakeLists.txt  cmlir.cc
lib/cmlir/: CMakeLists.txt  Dialect.cc
lib/cmlir/Transforms/: ArithCastProp.cc  ConstMerge.cc  ConstProp.cc  FMA.cc  FlattenCond.cc  LoopUnroll.cc  LoopVectorize.cc  Mem2Reg.cc  Raise2Affine.cc  RaiseMemref2Affine.cc  RaiseSCF2Affine.cc  Struct2Memref.cc
tests/: .clang-format  CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tests/chwc/: counter.cpp
tests/cmlirc/: add.c  call.c  cond.c  cond_op.c  continue.c  decrement.c  dist2.c  dist2_struct2memref.c  do_while.c  dot.c  fma.c  increment.c  init_list.c  init_vla.cpp  max.c  mem2reg.c  mlp.c  nested_cond.c  reduce_sum.c  sizeof.c  while.c  xor.c
tools/: CMakeLists.txt
tools/chwc/: ArgumentList.h  CMakeLists.txt  driver.cpp
tools/chwc/Lib/: ActionFactory.h  Consumer.h  Converter.h  FrontendAction.h
tools/chwc/Lib/Context/: ContextManager.cpp  ContextManager.h
tools/chwc/Lib/Conversions/Decls/: CXXRecord.cpp  Function.cpp  NonTypeTemplateParm.cpp
tools/chwc/Lib/Conversions/Exprs/: ArraySubscript.cpp  Assign.cpp  Binary.cpp  CXXBindTemporary.cpp  CXXConstruct.cpp  CXXFunctionalCast.cpp  CXXMemberCall.cpp  CXXOperatorCall.cpp  Call.cpp  ConditionalOperator.cpp  DeclRef.cpp  ExprWithCleanups.cpp  Exprs.cpp  ImplicitCast.cpp  Literals.cpp  MaterializeTemporary.cpp  Member.cpp
tools/chwc/Lib/Conversions/Exprs/Binary/: Assign.cpp  Binary.cpp  Pure.cpp
tools/chwc/Lib/Conversions/Exprs/Unary/: AddrOf.cpp  IncDec.cpp  Unary.cpp
tools/chwc/Lib/Conversions/Hal/: Clock.cpp  Field.cpp  Module.cpp  Reset.cpp
tools/chwc/Lib/Conversions/Stmts/: Compound.cpp  Decl.cpp  For.cpp  If.cpp  Return.cpp  Stmts.cpp
tools/chwc/Lib/Conversions/Types/: Builtin.cpp  Types.cpp
tools/chwc/Lib/Conversions/Utils/: Annotation.h  Array.h  Builder.h  Cast.h  Casts.h  Comb.h  Constant.h  Constants.h  Expr.h  HWOps.h  Module.h  State.h  Type.h  Types.h
tools/chwc/Runtime/: CMakeLists.txt
tools/chwc/Runtime/include/chwc/: Annotation.h  Hardware.h  Runtime.h  Type.h
tools/chwc/Runtime/include/chwc/Types/: SInt.h  Signal.h  UInt.h
tools/cmlirc/: ArgumentList.h  CMakeLists.txt  cmlirc.cpp  driver.cpp
tools/cmlirc/Lib/: ASTConsumer.h  ASTVisitor.cpp  ASTVisitor.h  ActionFactory.h  Consumer.h  ContextManager.cpp  ContextManager.h  Converter.h  FrontendAction.h  MLIRContextManager.cpp  MLIRContextManager.h  TypeConverter.cpp  TypeConverter.h  ValueCategory.cpp  ValueCategory.h
tools/cmlirc/Lib/Context/: ContextManager.cpp  ContextManager.h
tools/cmlirc/Lib/Conversions/: BinaryExprs.cpp  Casts.cpp  Exprs.cpp  Exprs.h  Helpers.cpp  SideEffects.cpp  Types.cpp  Types.h  UnaryExprs.cpp
tools/cmlirc/Lib/Conversions/Decls/: CXXMethod.cpp  Function.cpp  Record.cpp  Var.cpp
tools/cmlirc/Lib/Conversions/Exprs/: ArraySubscript.cpp  Binary.cpp  CStyleCast.cpp  CXXConstruct.cpp  CXXThis.cpp  Call.cpp  Conditional.cpp  DeclRef.cpp  Exprs.cpp  ImplicitCast.cpp  InitList.cpp  Literals.cpp  Member.cpp  Paren.cpp  SideEffects.cpp  Unary.cpp  UnaryOrTypeTrait.cpp
tools/cmlirc/Lib/Conversions/Exprs/Binary/: Assign.cpp  Binary.cpp  Pure.cpp
tools/cmlirc/Lib/Conversions/Exprs/Unary/: AddrOf.cpp  IncDec.cpp  Unary.cpp
tools/cmlirc/Lib/Conversions/Stmts/: Return.cpp  Stmts.cpp
tools/cmlirc/Lib/Conversions/Stmts/CF/: Break.cpp  CFUtils.cpp  CFUtils.h  CGUtils.h  Case.cpp  Continue.cpp  Do.cpp  For.cpp  If.cpp  Switch.cpp  While.cpp
tools/cmlirc/Lib/Conversions/Stmts/Loop/: Break.cpp  Continue.cpp  Do.cpp  For.cpp  LoopUtils.cpp  LoopUtils.h  While.cpp
tools/cmlirc/Lib/Conversions/Types/: Array.cpp  Builtin.cpp  Pointer.cpp  Record.cpp  Reference.cpp  Typedef.cpp  Types.cpp  Types.h
tools/cmlirc/Lib/Conversions/Utils/: Casts.h  Constants.h  LHS.h  Numeric.h  Numerics.h  Operators.h  StmtUtils.h  Types.h
tools/cmlirc/Lib/Pragmas/: PragmaHandler.cpp  PragmaHandler.h
